--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "license": "Unlicense",
   "module": "predicates.js",
   "scripts": {
-    "build-esm": "node compile.js | prettier --parser babel > predicates.js",
-    "prelint": "npm run build-esm",
+    "build": "node compile.js | prettier --parser babel > predicates.js",
+    "prelint": "npm run build",
     "lint": "eslint compile.js test.js predicates.js",
-    "test": "npm run lint && node -r esm test.js"
+    "test": "npm run lint && node -r esm test.js",
+    "bench": "node -r esm bench.js"
   },
   "devDependencies": {
     "eslint": "^6.3.0",
     "eslint-config-mourner": "^3.0.0",
     "esm": "^3.2.25",
     "prettier": "^1.18.2",
+    "robust-orientation": "^1.1.3",
     "tape": "^4.11.0",
     "terser": "^4.2.1"
   },
