--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   ],
   "author": "Vladimir Agafonkin",
   "license": "Unlicense",
+  "main": "umd/predicates.js",
+  "unpkg": "umd/predicates.min.js",
   "module": "index.js",
   "scripts": {
     "build": "mkdirp esm && node compile.js",
     "lint": "eslint *.js esm src",
     "test": "npm run build && npm run lint && node -r esm test.js",
-    "bench": "node -r esm bench.js"
+    "bench": "node -r esm bench.js",
+    "prepublishOnly": "rollup -c"
   },
   "devDependencies": {
     "eslint": "^6.3.0",
@@ -22,6 +25,8 @@
     "mkdirp": "^0.5.1",
     "nextafter": "^1.0.0",
     "robust-orientation": "^1.1.3",
+    "rollup": "^1.20.3",
+    "rollup-plugin-terser": "^5.1.1",
     "tape": "^4.11.0",
     "terser": "^4.2.1"
   },
