--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "esm": "^3.2.25",
     "mkdirp": "^0.5.1",
     "nextafter": "^1.0.0",
+    "robust-in-sphere": "^1.1.3",
     "robust-orientation": "^1.1.3",
     "rollup": "^1.20.3",
     "rollup-plugin-terser": "^5.1.1",
