various stylistic fixes

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "rules": {
       "camelcase": 0,
       "new-cap": 0,
-      "no-unused-vars": 0,
+      "no-unused-vars": [2, {"varsIgnorePattern": "splitter|bvirt|c|[ab]hi|[ab]lo|_[ijk0]"}],
       "no-lonely-if": 0
     },
     "globals": {
@@ -59,8 +59,5 @@
       "$Two_Two_Diff": false,
       "$Two_One_Product": false
     }
-  },
-  "prettier": {
-    "tabWidth": 4
   }
 }
