--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "umd/predicates.js",
   "unpkg": "umd/predicates.min.js",
   "module": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "mkdirp esm && node compile.js",
     "lint": "eslint *.js src",
@@ -41,7 +42,12 @@
     "rules": {
       "camelcase": 0,
       "new-cap": 0,
-      "no-unused-vars": [2, {"varsIgnorePattern": "splitter|bvirt|c|[ab]hi|[ab]lo|_[ijk0]"}],
+      "no-unused-vars": [
+        2,
+        {
+          "varsIgnorePattern": "splitter|bvirt|c|[ab]hi|[ab]lo|_[ijk0]"
+        }
+      ],
       "no-lonely-if": 0
     },
     "globals": {
