--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "mkdirp esm && node compile.js",
     "lint": "eslint *.js src",
     "test": "npm run lint && npm run build && node -r esm test.js",
+    "cov": "nyc -r lcov -r text node -r esm test.js",
     "bench": "node -r esm bench.js",
     "prepublishOnly": "npm run test && rollup -c"
   },
@@ -25,6 +26,7 @@
     "esm": "^3.2.25",
     "mkdirp": "^0.5.1",
     "nextafter": "^1.0.0",
+    "nyc": "^14.1.1",
     "robust-in-sphere": "^1.1.3",
     "robust-orientation": "^1.1.3",
     "rollup": "^1.20.3",
