fix insphereexact, better test coverage
ref #1

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "types": "index.d.ts",
   "scripts": {
     "build": "mkdirp esm && node compile.js",
-    "lint": "eslint *.js src",
-    "test": "npm run lint && npm run build && node -r esm test.js",
-    "cov": "ESM_DISABLE_CACHE=true nyc --require esm -r lcov -r text node test.js",
+    "lint": "eslint *.js src test/test.js",
+    "test": "npm run lint && npm run build && node -r esm test/test.js",
+    "cov": "rm -rf node_modules/.cache/esm && nyc --require esm -r lcov -r text node test/test.js",
     "bench": "node -r esm bench.js",
     "prepublishOnly": "npm run test && rollup -c"
   },
