--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
       "no-unused-vars": [
         2,
         {
-          "varsIgnorePattern": "splitter|bvirt|c|[ab]hi|[ab]lo|_[ijk0]"
+          "varsIgnorePattern": "splitter|bvirt|c|[ab]hi|[ab]lo|_[ijk0]|u3|[st][01]"
         }
       ],
       "no-lonely-if": 0
@@ -65,7 +65,8 @@
       "$Two_One_Diff": false,
       "$Two_Two_Sum": false,
       "$Two_Two_Diff": false,
-      "$Two_One_Product": false
+      "$Two_One_Product": false,
+      "$Cross_Product": false
     }
   }
 }
