--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "esm",
     "umd"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mourner/robust-predicates.git"
+  },
   "eslintConfig": {
     "extends": "mourner",
     "rules": {
