--- a/package.json
+++ b/package.json
@@ -8,28 +8,29 @@
   ],
   "author": "Vladimir Agafonkin",
   "license": "Unlicense",
-  "main": "umd/predicates.js",
+  "type": "module",
+  "main": "index.js",
   "unpkg": "umd/predicates.min.js",
   "module": "index.js",
+  "exports": "./index.js",
   "types": "index.d.ts",
   "scripts": {
     "build": "mkdirp esm && node compile.js",
     "lint": "eslint *.js src test/test.js",
-    "test": "npm run lint && npm run build && node -r esm test/test.js",
-    "cov": "rm -rf node_modules/.cache/esm && nyc --require esm -r lcov -r text node test/test.js",
-    "bench": "node -r esm bench.js",
+    "test": "npm run lint && npm run build && node test/test.js",
+    "cov": "c8 node test/test.js",
+    "bench": "node bench.js",
     "prepublishOnly": "npm run test && rollup -c"
   },
   "devDependencies": {
+    "c8": "^7.5.0",
     "eslint": "^7.19.0",
     "eslint-config-mourner": "^3.0.0",
-    "esm": "^3.2.25",
     "mkdirp": "^1.0.4",
     "nextafter": "^1.0.0",
-    "nyc": "^15.1.0",
     "robust-in-sphere": "^1.1.3",
     "robust-orientation": "^1.1.3",
-    "rollup": "^2.38.4",
+    "rollup": "^2.38.5",
     "rollup-plugin-terser": "^7.0.2",
     "tape": "^5.1.1",
     "terser": "^5.5.1"
@@ -45,6 +46,9 @@
   },
   "eslintConfig": {
     "extends": "mourner",
+    "parserOptions": {
+      "ecmaVersion": 2020
+    },
     "rules": {
       "camelcase": 0,
       "new-cap": 0,
