--- a/package.json
+++ b/package.json
@@ -23,20 +23,21 @@
     "prepublishOnly": "npm run test && rollup -c"
   },
   "devDependencies": {
-    "c8": "^7.5.0",
-    "eslint": "^7.19.0",
+    "c8": "^7.7.0",
+    "eslint": "^7.23.0",
     "eslint-config-mourner": "^3.0.0",
     "mkdirp": "^1.0.4",
     "nextafter": "^1.0.0",
     "robust-in-sphere": "^1.1.3",
     "robust-orientation": "^1.1.3",
-    "rollup": "^2.38.5",
+    "rollup": "^2.44.0",
     "rollup-plugin-terser": "^7.0.2",
-    "tape": "^5.1.1",
-    "terser": "^5.5.1"
+    "tape": "^5.2.2",
+    "terser": "^5.6.1"
   },
   "files": [
     "index.js",
+    "index.d.ts",
     "esm",
     "umd"
   ],
