--- a/package.json
+++ b/package.json
@@ -23,17 +23,15 @@
     "prepublishOnly": "npm run test && rollup -c"
   },
   "devDependencies": {
-    "c8": "^7.10.0",
-    "eslint": "^8.3.0",
+    "@rollup/plugin-terser": "^0.1.0",
+    "c8": "^7.12.0",
+    "eslint": "^8.26.0",
     "eslint-config-mourner": "^3.0.0",
     "mkdirp": "^1.0.4",
     "nextafter": "^1.0.0",
     "robust-in-sphere": "^1.2.1",
     "robust-orientation": "^1.2.1",
-    "rollup": "^2.60.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "tape": "^5.3.2",
-    "terser": "^5.10.0"
+    "rollup": "^3.2.3"
   },
   "files": [
     "index.js",
