--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "exports": "./index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "mkdirp esm && node compile.js",
+    "build": "mkdir esm && node compile.js",
     "lint": "eslint *.js src test/test.js",
     "pretest": "npm run lint && npm run build",
     "test": "node --test",
@@ -25,13 +25,12 @@
   },
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
-    "eslint": "^9.6.0",
-    "eslint-config-mourner": "^4.0.1",
-    "mkdirp": "^3.0.1",
+    "eslint": "^9.38.0",
+    "eslint-config-mourner": "^4.1.0",
     "nextafter": "^1.0.0",
     "robust-in-sphere": "^1.2.1",
     "robust-orientation": "^1.2.1",
-    "rollup": "^4.18.0"
+    "rollup": "^4.52.4"
   },
   "files": [
     "index.js",
